# wifi-bot

./: .env  .env.dev  .env.prod  .gitignore  README.md  pyproject.toml  requirement.txt
wifi_bot/plugins/bilibili/: __init__.py  data_source.py
wifi_bot/plugins/lol/: __init__.py  constants.py  update_static.py
wifi_bot/static/lol/: legends_info.json
wifi_bot/utils/: image.py
